deleted fqing wrapper in reviews section overflowing finally stopped and cards are still running fine

--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -2,6 +2,7 @@
 	margin: 0 auto;
 	width: 100%;
 	max-width: 1200px;
+	overflow-y: hidden;
 }
 
 .white-block {
@@ -66,25 +67,3 @@
 }
 
 // media querries
-@media (min-width: 768px) {
-	.white-block {
-		height: 50px;
-		width: 45%;
-		display: block;
-	}
-
-	.section-heading {
-		font-size: 3.7rem;
-	}
-	.section-padding {
-		padding: 8em 2em;
-	}
-}
-@media (min-width: 992px) {
-	.section-heading {
-		font-size: 4.8rem;
-	}
-	.section-padding {
-		padding: 10em 2em;
-	}
-}
