--- a/sass/_mediaquerries.scss
+++ b/sass/_mediaquerries.scss
@@ -16,6 +16,7 @@
 @media (min-height: 812px) and (max-width: 375px) {
 	.reviews {
 		.swiper-slide {
+			
 			&-img {
 				img {
 					margin: 1.5rem 0;
@@ -153,6 +154,22 @@
 			}
 		}
 	}
+
+	.white-block {
+		height: 50px;
+		width: 45%;
+		display: block;
+		&-right{
+			display: none;
+		}
+	}
+
+	.section-heading {
+		font-size: 3.7rem;
+	}
+	.section-padding {
+		padding: 8em 2em;
+	}
 }
 
 @media (min-width: 992px) {
@@ -234,6 +251,13 @@
 				}
 			}
 		}
+	}
+
+	.section-heading {
+		font-size: 4.8rem;
+	}
+	.section-padding {
+		padding: 10em 2em;
 	}
 }
 @media (min-width: 1100px) {
